--- a/.github/workflows/aseprite_build.yml
+++ b/.github/workflows/aseprite_build.yml
@@ -1,5 +1,13 @@
 name: Build
-
+on:
+  schedule:
+    - cron:  '30 1 1,15 * *'
+  workflow_dispatch:
+    inputs:
+      name:
+        description: 'Run?'
+        required: true
+        default: 'YES!'
 on:
   schedule:
     - cron: '0 0 * * *'
